added introduction and background sections

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -148,6 +148,10 @@
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
 
+\section{Introduction}
+
+\section{Background}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
