added frames to background

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -152,6 +152,15 @@
 
 \section{Background}
 
+\begin{frame}
+\frametitle{Embedded Domain Specific Languages}
+\end{frame}
+
+\begin{frame}
+\frametitle{Multiparadigm languages}
+\end{frame}
+
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
