Added Existing and Proposed Work section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -168,6 +168,8 @@
 
 \section{Background}
 
+\section{Existing and Proposed Work}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
