Added Other Contributions section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -170,6 +170,8 @@
 
 \section{Existing and Proposed Work}
 
+\section{Other Contributions}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
