Added Embedding a Programming Language into another Programming Language section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -172,6 +172,8 @@
 
 \section{Other Contributions}
 
+\section{Embedding a Programming Language into another Programming Language}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
