--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -174,6 +174,8 @@
 
 \section{Embedding a Programming Language into another Programming Language}
 
+\section{Multi Paradigm Lannguages (Functional Logic Languages)}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
