Added Haskell section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -176,6 +176,8 @@
 
 \section{Multi Paradigm Lannguages (Functional Logic Languages)}
 
+\section{\progLang{Haskell}}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
