Added Prolog section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -178,6 +178,8 @@
 
 \section{\progLang{Haskell}}
 
+\section{\progLang{Prolog}}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
