Added Related Concepts section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -180,6 +180,8 @@
 
 \section{\progLang{Prolog}}
 
+\section{Related Concepts}
+
 \section{Functorizing a language}
 \section{Monadic unification}
 \section{Prototype 1}
