Corrected typo in sectoin name

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -174,7 +174,7 @@
 
 \section{Embedding a Programming Language into another Programming Language}
 
-\section{Multi Paradigm Lannguages (Functional Logic Languages)}
+\section{Multi Paradigm Languages (Functional Logic Languages)}
 
 \section{\progLang{Haskell}}
 
