Added Fututre Scope section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -189,6 +189,8 @@
 \section{Prototype 3}
 \section{Prototype 4}
 
+\section{Future Scope}
+
 \section{Bibliography}
 \begin{frame}[allowframebreaks]
 	\frametitle{Bibliography}
