Added Conclusion section.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -191,6 +191,8 @@
 
 \section{Future Scope}
 
+\section{Conclusion}
+
 \section{Bibliography}
 \begin{frame}[allowframebreaks]
 	\frametitle{Bibliography}
