--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -143,7 +143,7 @@
 		\titlepage % Print the title page as the first slide
 	\end{frame}
 
-\begin{frame}
+\begin{frame}[allowframebreaks=0.5]
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
