Added support for presenter notes.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -139,6 +139,7 @@
 
 \begin{document}
 	\setbeamertemplate{footline}[frame number]
+	\setbeameroption{show notes} % un-comment to see the notes
 	\begin{frame}
 		\titlepage % Print the title page as the first slide
 	\end{frame}
@@ -149,7 +150,11 @@
 \end{frame}
 
 \section{Introduction}
+\begin{frame}
 
+\note[item]<2>{Sample note.}
+
+\end{frame}
 \section{Motivation}
 
 \section{Problem Statement}
