Changed  itemize icon to circle.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -139,6 +139,7 @@
 
 \begin{document}
 	\setbeamertemplate{footline}[frame number]
+	\setbeamertemplate{itemize items}[circle]
 	\setbeameroption{show notes} % un-comment to see the notes
 	\begin{frame}
 		\titlepage % Print the title page as the first slide
@@ -151,6 +152,9 @@
 
 \section{Introduction}
 \begin{frame}
+\begin{itemize}
+\item
+\end{itemize}
 
 \note[item]<2>{Sample note.}
 
