Added empty frames for each section with \clearpage.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -150,6 +150,8 @@
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \end{frame}
 
+\clearpage
+
 \section{Introduction}
 \begin{frame}
 \begin{itemize}
@@ -159,36 +161,134 @@
 \note[item]<2>{Sample note.}
 
 \end{frame}
+
+\clearpage
+
 \section{Motivation}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Problem Statement}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Background}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Existing and Proposed Work}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Other Contributions}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Embedding a Programming Language into another Programming Language}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Multi Paradigm Languages (Functional Logic Languages)}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{\progLang{Haskell}}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{\progLang{Prolog}}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Related Concepts}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Functorizing a language}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
+
 \section{Monadic unification}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
+
 \section{Prototype 1}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
+
 \section{Prototype 2}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
+
 \section{Prototype 3}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
+
 \section{Prototype 4}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Future Scope}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Conclusion}
+\begin{itemize}
+\item
+\end{itemize}
+
+\clearpage
 
 \section{Bibliography}
 \begin{frame}[allowframebreaks]
@@ -198,6 +298,8 @@
 	\bibliographystyle{plain} 
 	\bibliography{Thesis-Presentation}
 \end{frame}
+
+\clearpage
 
 %------------------------------------------------
 
