--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -147,9 +147,13 @@
 		under  Dr. David Casperson. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
 	\end{frame}
 
-\begin{frame}[allowframebreaks=0.5]
+\begin{frame}[allowframebreaks=0.4]
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
+\note[item]{We will being with a preliminaries, motivation and background along with an overview of the contributions.}
+\note[item]{Next, we dive into the approaches to merge different programming languages and the languages themselves.}
+\note[item]{We will also look at our methodology and the prototype implementations.}
+\note[item]{And lastly, we sum up. So let's get cracking.}
 \end{frame}
 
 \clearpage
