--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -161,11 +161,17 @@
 \section{Introduction}
 \begin{frame}
 \begin{itemize}
-\item
+\item Programming and programming languages.
+\note[item]{Beginning with programming languages, they are in the hundereds and thousands.}
+\note[item]{They cater to different needs and requirements.}
+\note[item]{They are classified depending on their properties.}
+
+
+\item Declarative style of programming.
+\note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
+Advantages of Declarative Programming Lloyd, J.W]}
+\note[item]{It further branches out into functional and logic programming.}
 \end{itemize}
-
-\note[item]<2>{Sample note.}
-
 \end{frame}
 
 \clearpage
