Wrapped itemize environment with frame environment.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -179,126 +179,195 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \section{Motivation}
 \begin{itemize}
 \item
+\item \progLang{Haskell} and \progLang{Prolog}
 \end{itemize}
+\end{frame}
 
 \clearpage
 
 \section{Problem Statement}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
 
 \clearpage
 
 \section{Background}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Existing and Proposed Work}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Other Contributions}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Embedding a Programming Language into another Programming Language}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Multi Paradigm Languages (Functional Logic Languages)}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{\progLang{Haskell}}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{\progLang{Prolog}}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Related Concepts}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Functorizing a language}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Monadic unification}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Prototype 1}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Prototype 2}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Prototype 3}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Prototype 4}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Future Scope}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
 \section{Conclusion}
+\begin{frame}
 \begin{itemize}
 \item
 \end{itemize}
+
+\end{frame}
+
 
 \clearpage
 
