Added some content and script to Motivation.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -177,9 +177,18 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \clearpage
 
 \section{Motivation}
+\begin{frame}
 \begin{itemize}
-\item
-\item \progLang{Haskell} and \progLang{Prolog}
+\item Language classification.
+\note[item]{Languages are classified into categories known paradigms depending on their characteristics.}
+\note[item]{Languages from the same paradigm may exhibit different properties.} 
+
+\item For example, \progLang{Haskell}(functional language) and \progLang{Prolog}(logic language).
+\note[item]{\progLang{Haskell} is a functional programming language while \progLang{Prolog} is a logic programming language.}
+\note[item]{Both of them are declarative in nature but work differently.}
+
+\item Scope.
+\note[item]{} 
 \end{itemize}
 \end{frame}
 
