Modified script for Overview.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -143,7 +143,7 @@
 	\setbeameroption{show notes} % un-comment to see the notes
 	\begin{frame}
 		\titlepage % Print the title page as the first slide
-		\note[item]{Good afternoon ladies and gentlemen. My name is Mehul Solanki. I am a graduate student in the computer science department 
+		\note[item]{Good afternoon everybody. My name is Mehul Solanki. I am a graduate student in the computer science department 
 		under  Dr. David Casperson. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
 	\end{frame}
 
