Added Scope content and script to Movitation.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -188,7 +188,9 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \note[item]{Both of them are declarative in nature but work differently.}
 
 \item Scope.
-\note[item]{} 
+\note[item]{The versatility of a programming language is how well it can adapt to a particular problem.}
+\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
+	Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
 \end{itemize}
 \end{frame}
 
