--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -199,7 +199,24 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \section{Problem Statement}
 \begin{frame}
 \begin{itemize}
-\item
+\item General purpose programming languages.
+\note[item]{A truly general purpose programming language, GPL, is described which contains facilities for constructing (within the 
+language) new data types as well as facilities for operations performed upon them.[Jan V. Garwick. 1968. Programming Languages: GPL, a 
+truly general purpose language. Commun. ACM 11, 9 (September 1968), 634-638. DOI=http://dx.doi.org/10.1145/364063.364092]} 
+
+\item Domain specific programming languages.
+\note[item]{A domain specific language is a concise micro language that offers tools and functionalities focused on solving problems ona  
+particular domain.} 
+
+\item Selection
+\note[item]{Choosing a language is quite a daunting task. There are costs related to migration, training among others.}
+
+\item Replicating functionality.
+\note[item]{One option is to replicate the target language funcitonality in the current environment, and that is what we will look at 
+today. Replicating \progLang{Prolog}-like functionality in \progLang{Haskell}}
+\note[item]{The result is something close to a \textit{haskellised} \progLang{Prolog}, a functional eDSl with logic programming 
+capabilities.}
+
 \end{itemize}
 
 \end{frame}
