Split Problem Statement in two frames.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -207,7 +207,11 @@ truly general purpose language. Commun. ACM 11, 9 (September 1968), 634-638. DOI
 \item Domain specific programming languages.
 \note[item]{A domain specific language is a concise micro language that offers tools and functionalities focused on solving problems ona  
 particular domain.} 
+\end{itemize}
+\end{frame}
 
+\begin{frame}
+\begin{itemize}
 \item Selection
 \note[item]{Choosing a language is quite a daunting task. There are costs related to migration, training among others.}
 
