Added content and script for Funcitonal programming frame in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -230,11 +230,20 @@ capabilities.}
 \section{Background}
 \begin{frame}
 \begin{itemize}
-\item
+\item Functional programming.
+\note[item]{works by applying mathematical functions to arguments to get results. A program is not but functions which can also be passed 
+to other functions as arguments.}
+
+\item $\lambda$-calculi.
+\note[item]{is a formal system in mathematical logic for expressing computations.}
+\note[item]{The typed variant of $\lambda$-calculi puts restrictions on the type of data a function can work with.}
+
+\item Damas-Hindley-Milner type system.
+\note[item]{provides the ability to give a most general type to a function or program.}
+
+\item For example, \progLang{Haskell}, \progLang{Scheme} and \progLang{Lisp}.
 \end{itemize}
-
 \end{frame}
-
 
 \clearpage
 
