Added content and script to Logic programming frame in Background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -245,6 +245,18 @@ to other functions as arguments.}
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\begin{itemize}
+\item Logic programming.
+\note[item]{is based on formal logic. A program consists of a set of rules used to derive a solution.}
+
+\item Universal Horn clauses.
+\note[item]{A Horn clause is a clause (a disjunction of literals) with at most one positive literal.}
+
+\item For example, \progLang{Prolog}.
+\end{itemize}
+\end{frame}
+
 \clearpage
 
 \section{Existing and Proposed Work}
