Added content and script for Existing work in Existing and Proposed Work.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -261,10 +261,19 @@ to other functions as arguments.}
 
 \section{Existing and Proposed Work}
 \begin{frame}
+\note[item]{Here we will look at the existing work,}
 \begin{itemize}
-\item
-\end{itemize}
+\item Implementations.
+\note[item]{Few exist. Incomplete and lack pratical features.}
 
+\item Literature.
+\note[item]{A series of papers provide useful insights into replicating \progLang{Prolog}-like clauses in \progLang{Haskell} though none
+have accompanying implementations.}
+
+\item Libraries.
+\note[item]{Again a few exist and provide only a REPL interface. It is not possible to write a \progLang{Prolog}-like program in a file and
+then compile and run it.}
+\end{itemize}
 \end{frame}
 
 
