Added content and script to Improvements in Existing and Proposed Work.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -276,6 +276,17 @@ then compile and run it.}
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\note[item]{The improvements,}
+\begin{itemize}
+\item Practical features.
+\note[item]{Firstly, we added practical features a \progLang{Prolog} distribution might, these being \prologConstruct{cut} and
+\prologConstruct{fail}.}
+
+\item \progLang{Prolog} in \progLang{Haskell}.
+\note[item]{Meaning, one can write a program in our eDSl just like one would write a \progLang{Haskell} program.}
+\end{itemize}
+\end{frame}
 
 \clearpage
 
