Added prototype 1 architecture to Prototype 1.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -396,9 +396,11 @@ direction for solving the problem of embedding languages.}
 
 \section{Prototype 1}
 \begin{frame}
-\begin{itemize}
-\item
-\end{itemize}
+\begin{figure}[H]
+  \includegraphics[width=1\textwidth]{Prototype-1-architecture.jpeg}
+  \caption{Architecture of Prototype 1}
+  \label{fig:proto1-arch}
+\end{figure}
 
 \end{frame}
 
