Added prototype 2 architecture in Prototype 2.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -409,9 +409,11 @@ direction for solving the problem of embedding languages.}
 
 \section{Prototype 2}
 \begin{frame}
-\begin{itemize}
-\item
-\end{itemize}
+\begin{figure}[H]
+  \includegraphics[width=1\textwidth]{Prototype-2-architecture.jpeg}
+  \caption{Architecture of Prototype 2}
+  \label{fig:proto1-arch}
+\end{figure}
 
 \end{frame}
 
