Added prototype 3 architecture to Prototype 3.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -422,9 +422,11 @@ direction for solving the problem of embedding languages.}
 
 \section{Prototype 3}
 \begin{frame}
-\begin{itemize}
-\item
-\end{itemize}
+\begin{figure}[H]
+  \includegraphics[width=1\textwidth]{Prototype-3-architecture.jpeg}
+  \caption{Architecture of Prototype 3}
+  \label{fig:proto1-arch}
+\end{figure}
 
 \end{frame}
 
