Added prototype 4 architecture to Prototype 4.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -434,10 +434,11 @@ direction for solving the problem of embedding languages.}
 
 \section{Prototype 4}
 \begin{frame}
-\begin{itemize}
-\item
-\end{itemize}
-
+\begin{figure}[H]
+  \includegraphics[width=1\textwidth]{Prototype-4-architecture.jpeg}
+  \caption{Architecture of Prototype 4}
+  \label{fig:proto1-arch}
+\end{figure}
 \end{frame}
 
 
