Added content and script to Embedding a Programming Language into another Programming Language.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -319,8 +319,19 @@ direction for solving the problem of embedding languages.}
 
 \section{Embedding a Programming Language into another Programming Language}
 \begin{frame}
+\note[item]{This section deals with embedding a target language in the host environement.}
+\note[item]{The aim of this approach to bring the target language functionalities to the host language.}
 \begin{itemize}
-\item
+\item Embedding \progLang{Prolog}.
+\note[item]{\progLang{Prolog} is a very popular choice for embedding.}
+
+\item Target languages : \progLang{Java, Lisp, Scheme}.
+
+\item \progLang{Prolog} in \progLang{Haskell} : \codeLibrary{Mini Prolog} and \codeLibrary{prolog}.
+\note[item]{A \progLang{Prolog} implementation does exist for an older specification of \progLang{Haskell}.}
+
+\item Logic programming in \progLang{Haskell}.
+\note[item]{Few unification and backtracking libraries do exist for \progLang{Haskell} which use monads to capture and maintain state.}
 \end{itemize}
 
 \end{frame}
