Added content and script to Multi Paradigm Languages (Functional Logic Languages).

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -340,9 +340,27 @@ direction for solving the problem of embedding languages.}
 \clearpage
 
 \section{Multi Paradigm Languages (Functional Logic Languages)}
+
 \begin{frame}
+\note[item]{In this section we talk about languages that exhibit properties from multiple paradigms.}
 \begin{itemize}
-\item
+\item Multi paradigm language.
+\note[item]{A multi-paradigm programming language is a programming language that supports more than one programming paradigm allowing the 
+programmer to work in a variety of styles.[https://developer.mozilla.org/ar/docs/multiparadigmlanguage.html]}
+
+\item For example, \progLang{Scala}.
+\note[item]{A notable example is \progLang{Scala}, object functional language based on \progLang{Java}. Simply put it is Java with strong 
+funcitonal characteristics such as higher order functions.}
+
+\item Functional Logic programming languages.
+\note[item]{are hybrid declarative languages exhibiting functional and logic programming languages.}
+
+\item For example, \progLang{Curry}.
+\note[item]{is a \progLang{Haskell} based functional logic programming language providing the choice operator for non deterministic
+operations along with two way pattern matching.}
+
+\item Other examples, \progLang{Mercury}.
+\note[item]{which goes the other way round, starting from \progLang{Prolog} and adding \progLang{Haskell} features.}
 \end{itemize}
 
 \end{frame}
