Modified title page (content after colon on new line).

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -126,7 +126,7 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
-\title[]{Embedding  Programming Languages: \progLang{Prolog} in \progLang{Haskell}} % The short title appears at the bottom of every slide, the full title is only on the title page
+\title[]{Embedding  Programming Languages: \newline \progLang{Prolog} in \progLang{Haskell}} % The short title appears at the bottom of every slide, the full title is only on the title page
 
 \author{Mehul Solanki} % Your name
 \institute[UNBC] % Your institution as it will appear on the bottom of every slide, may be shorthand to save space
