Changed allowframebreaks option for Overview.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -147,7 +147,7 @@
 		under  Dr. David Casperson. And today I would like to talk about embedding \progLang{Prolog} in \progLang{Haskell}.}
 	\end{frame}
 
-\begin{frame}[allowframebreaks=0.4]
+\begin{frame}[allowframebreaks]
 \frametitle{Overview} % Table of contents slide, comment this block out to remove it
 \tableofcontents % Throughout your presentation, if you choose to use \section{} and \subsection{} commands, these will automatically be printed on this slide as an overview of your presentation
 \note[item]{We will being with a preliminaries, motivation and background along with an overview of the contributions.}
