Added content to Programming Languages.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -157,12 +157,28 @@
 \end{frame}
 
 \section{Introduction}
-\begin{frame}{Introduction}
-\begin{itemize}
-\item Programming and programming languages.
+\begin{frame}{Programming Languages}
+\begin{columns}[T]
+    \begin{column}{.4\textwidth}
+     \begin{block}{}
+A programming language is an artificial language designed to communicate instructions to a machine, particularly a computer.
+\\*For example, \textsc{C, Java}.
+    \end{block}
+    \end{column}
+    \begin{column}{.6\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}[H]
+    \includegraphics[width=1\textwidth]{progLanguages.jpg}
+    
+    \caption{The Universe of Programming Languages}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+
 \note[item]{Beginning with programming languages, they are in the hundereds and thousands.}
-\note[item]{They cater to different needs and requirements.}
-\note[item]{They are classified depending on their properties.}
+\end{frame}
 
 
 \item Declarative style of programming.
