Added content to Programming Language Paradigms.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -180,6 +180,27 @@ A programming language is an artificial language designed to communicate instruc
 \note[item]{Beginning with programming languages, they are in the hundereds and thousands.}
 \end{frame}
 
+\begin{frame}
+\frametitle{Programming Language Paradigms}
+  \begin{columns}[T]
+    \begin{column}{.4\textwidth}
+     \begin{block}{}
+A programming paradigm is a fundamental style of computer programming, a way of building the structure and elements of computer programs.
+\\*For example, Object Oriented Programming.
+    \end{block}
+    \end{column}
+    \begin{column}{.6\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=1\textwidth]{programminglanguageparadigms.jpg} 
+    \caption{Programming Paradigms}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+  \note[item]{}
+\end{frame}
 
 \item Declarative style of programming.
 \note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
