Added content to Classification.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -202,6 +202,27 @@ A programming paradigm is a fundamental style of computer programming, a way of 
   \note[item]{}
 \end{frame}
 
+\begin{frame}
+\frametitle{Classification}
+  \begin{columns}[T]
+    \begin{column}{.5\textwidth}
+     \begin{block}{}
+Programming languages are classified into paradigms depending on their characteristics and features. 
+\\*For example, \textsc{Java} is an Object Oriented Programming Language.
+    \end{block}
+    \end{column}
+    \begin{column}{.5\textwidth}
+    \begin{block}{}
+% Your image included here
+\begin{figure}
+    \includegraphics[width=\textwidth]{classification.png} 
+    \caption{Classification of Programming Languages}
+ \end{figure}   
+    \end{block}
+    \end{column}
+  \end{columns}
+  \note[item]{}
+\end{frame}
 \item Declarative style of programming.
 \note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
 Advantages of Declarative Programming Lloyd, J.W]}
