Added content to Declarative Programming.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -223,10 +223,23 @@ Programming languages are classified into paradigms depending on their character
   \end{columns}
   \note[item]{}
 \end{frame}
+
+\begin{frame}
+\frametitle{Declarative Programming}
+\begin{itemize}
 \item Declarative style of programming.
+
+These languages are said to describe (declaratively) what to do and not (operationally) how to do it.
+
 \note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
 Advantages of Declarative Programming Lloyd, J.W]}
+
 \note[item]{It further branches out into functional and logic programming.}
+
+\item For example, \progLang{Haskell}(functional language) and \progLang{Prolog}(logic language).
+\note[item]{\progLang{Haskell} is a functional programming language while \progLang{Prolog} is a logic programming language.}
+\note[item]{Both of them are declarative in nature but work differently.}
+
 \end{itemize}
 \end{frame}
 
