--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -230,7 +230,7 @@ Programming languages are classified into paradigms depending on their character
 \item Declarative style of programming.
 
 These languages are said to describe (declaratively) what to do and not (operationally) how to do it.
-
+\note[item]{http://www.eolss.net/sample-chapters/c15/e6-45-05-04.pdf}
 \note[item]{One such style is the declarative paradigm, where the describe the logic of a computation without the control flow.[Practical 
 Advantages of Declarative Programming Lloyd, J.W]}
 
