Added frame title to Motivation.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -244,6 +244,7 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \end{frame}
 
 \begin{frame}{Motivation}
+\frametitle{(to be discarded ......)}
 \begin{itemize}
 \item Language classification.
 \note[item]{Languages are classified into categories known paradigms depending on their characteristics.}
