--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -261,6 +261,32 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \end{itemize}
 \end{frame}
 
+\begin{frame}{Scope}
+	\note[item]{The versatility of a programming language is how well it can adapt to a particular problem.}
+	\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
+		Prolog[https://ti.arc.nasa.gov/m/pub-archive/999h/0999\%20\%28Rayner\%29.pdf].}
+ \frametitle{General versus Special}
+ \begin{columns}[T]
+  \begin{column}{0.5\textwidth}
+   \begin{block}{General Purpose Language}
+    \textcolor{green}{Broad scope} but \textcolor{red}{problem needs to be moulded according to the capability of the language}.
+    \note[item]{A truly general purpose programming language, GPL, is described which contains facilities for constructing (within the 
+     language) new data types as well as facilities for operations performed upon them.[Jan V. Garwick. 1968. Programming Languages: GPL, a 
+     truly general purpose language. Commun. ACM 11, 9 (September 1968), 634-638. DOI=http://dx.doi.org/10.1145/364063.364092]}
+   \end{block}
+  \end{column}
+
+  \begin{column}{0.5\textwidth}
+   \begin{block}{Special Purpose Language}
+    \textcolor{red}{Limited scope} but \textcolor{green}{easier to express the problem as the suitable capabilities are readily available}. 
+ 	 \note[item]{A domain specific language is a concise micro language that offers tools and functionalities focused on solving problems 
+ 	 in a particular domain.} 
+   \end{block}
+  \end{column}
+ \end{columns}
+ 
+\end{frame}
+
 
 \begin{frame}{Problem Statement}
 \begin{itemize}
