Changed title for Scope.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -288,7 +288,8 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \end{frame}
 
 
-\begin{frame}{Problem Statement}
+\begin{frame}{Scope}
+\frametitle{(to be discarded ......)}
 \begin{itemize}
 \item General purpose programming languages.
 \note[item]{A truly general purpose programming language, GPL, is described which contains facilities for constructing (within the 
