Added option to hide other subsections.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -15,7 +15,7 @@
 %	PACKAGES AND THEMES
 %----------------------------------------------------------------------------------------
 
-\documentclass{beamer}
+\documentclass[hideothersubsections]{beamer}
 
 \mode<presentation> {
 
