--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -78,7 +78,7 @@
 
 \usepackage{graphicx} % Allows including images
 \usepackage{booktabs} % Allows the use of \toprule, \midrule and \bottomrule in tables
-
+\usepackage{tikz}
 %---------------------------------------------------------------------------------------------
 %%  This file is really -*-LaTeX-*-
 %%             File:  thesis-macros.sty
