Added subsection for Programming Language Paradigms  in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -182,6 +182,7 @@ A programming language is an artificial language designed to communicate instruc
 \note[item]{Beginning with programming languages, they are in the hundereds and thousands.}
 \end{frame}
 
+\subsection{Programming Language Paradigms}
 \begin{frame}
 \frametitle{Programming Language Paradigms}
   \begin{columns}[T]
