Added subsection for Declarative Programming in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -228,6 +228,7 @@ Programming languages are classified into paradigms depending on their character
   \note[item]{}
 \end{frame}
 
+\subsection{Declarative Programming}
 \begin{frame}
 \frametitle{Declarative Programming}
 \begin{itemize}
