Added subsection for Scope in Introduction.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -266,6 +266,7 @@ Advantages of Declarative Programming Lloyd, J.W]}
 \end{itemize}
 \end{frame}
 
+\subsection{Scope}
 \begin{frame}{Scope}
 	\note[item]{The versatility of a programming language is how well it can adapt to a particular problem.}
 	\note[item]{For instance, \progLang{Prolog} is good for rule based systems. "Clarissa", a voice user interface for browsing space station procedures is written in SICStus
