--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -293,7 +293,7 @@ Advantages of Declarative Programming Lloyd, J.W]}
  
 \end{frame}
 
-
+\subsection{Discarded Scope}
 \begin{frame}{Scope}
 \frametitle{(to be discarded ......)}
 \begin{itemize}
