Added subsection for Languages in What was done.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -310,6 +310,7 @@ particular domain.}
 
 \section{What was done}
 
+\subsection{Languages}
 \begin{frame}{Languages}
 \begin{itemize}
 \item Selection
