Added section for background.

--- a/Thesis-Presentation.tex
+++ b/Thesis-Presentation.tex
@@ -328,7 +328,7 @@ capabilities.}
 
 \clearpage
 
-\begin{frame}{Background}
+\section{Background}
 
 \begin{itemize}
 \item Functional programming.
